# goserver/controllers/controlled/controlled.go
@@ -4,6 +4,7 @@ import (
 	"bytes"
 	"encoding/binary"
 	"encoding/json"
+	"fmt"
 	"strconv"
 
 	"github.com/astaxie/beego"
@@ -15,8 +16,17 @@ type Controlled struct {
 	beego.Controller
 }
 
-// Request struct for POST and PUT metods
-type Request struct {
+// RequestPost struct for POST metods
+type RequestPost struct {
+	Name          string `json:"name"`
+	Host          string `json:"host"`
+	Port          string `json:"port"`
+	CommonBuffer  int    `json:"common_buffer"`
+	HomeControlID string `json:"home_control_id"`
+}
+
+// RequestPut struct for PUT metods
+type RequestPut struct {
 	ControlledID  int    `json:"id"`
 	Name          string `json:"name"`
 	Host          string `json:"host"`
@@ -26,59 +36,62 @@ type Request struct {
 }
 
 // Post - create controlled
-// Post public API
-// @Title Create
+// @Title Post
 // @Description create controlled
-// @Param	body	body	Request		"The object content"
-// @Success 200 int32
+// @Param	body	body	controlled.RequestPost	true		"The object content"
+// @Success 200 int	"controlled ID"
 // @Failure 400 wrong body data
 // @Failure 500 database error
 // @router / [post]
-func (c *Controlled) Post() {
-	var request *Request
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, request)
+func (o *Controlled) Post() {
+	request := &RequestPost{}
+	fmt.Println(o.Ctx.Input.RequestBody)
+	err := json.Unmarshal(o.Ctx.Input.RequestBody, request)
 	if err != nil {
-		c.CustomAbort(400, "Can't unmarshal request")
+		fmt.Println(213)
+		o.CustomAbort(400, "Can't unmarshal request")
 	}
 
-	request.ControlledID, err = controlled.RegistrationAndUpdateControlled(0, request.Host, request.Port, request.Name, request.CommonBuffer, request.HomeControlID)
+	controlledID, err := controlled.RegistrationAndUpdateControlled(0, request.Host, request.Port, request.Name, request.CommonBuffer, request.HomeControlID)
 	if err != nil {
-		c.CustomAbort(500, err.Error())
+		o.CustomAbort(500, err.Error())
 	}
 
 	IDbytes := new(bytes.Buffer)
-	binary.Write(IDbytes, binary.LittleEndian, request.ControlledID)
-	c.Ctx.Output.SetStatus(200)
-	c.Ctx.Output.Body(IDbytes.Bytes())
+	err = binary.Write(IDbytes, binary.LittleEndian, controlledID)
+	if err != nil {
+		o.CustomAbort(500, err.Error())
+	}
+	o.Ctx.Output.SetStatus(200)
+	o.Ctx.Output.Body(IDbytes.Bytes())
 }
 
 // Put - update controlled
-// Put public API
-// @Title Update
+// @Title Put
 // @Description update controlled
-// @Param	body	body	Request		"The object content"
+// @Param	body	body	controlled.RequestPut	true		"The object content"
 // @Success 200
 // @Failure 400 wrong body data
 // @Failure 500 database error
 // @router / [put]
-func (c *Controlled) Put() {
-	var request *Request
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, request)
+func (o *Controlled) Put() {
+	var request *RequestPut
+	err := json.Unmarshal(o.Ctx.Input.RequestBody, request)
 	if err != nil {
-		c.CustomAbort(400, "Can't unmarshal request")
+		o.CustomAbort(400, "Can't unmarshal request")
 	}
 
 	if request.ControlledID == 0 {
-		c.CustomAbort(400, "No ID")
+		o.CustomAbort(400, "No ID")
 	}
 
 	request.ControlledID, err = controlled.RegistrationAndUpdateControlled(request.ControlledID, request.Host, request.Port, request.Name, request.CommonBuffer, request.HomeControlID)
 	if err != nil {
-		c.CustomAbort(500, err.Error())
+		o.CustomAbort(500, err.Error())
 	}
 
-	c.Data["json"] = "Ok"
-	c.ServeJSON()
+	o.Data["json"] = "Ok"
+	o.ServeJSON()
 }
 
 // ResponseControlled for GET metod, if no :id
@@ -91,41 +104,39 @@ type ResponseControlled struct {
 	HomeControlID string `json:"home_control_id"`
 }
 
-// Get - return favorite controlled
+// GetOne - return favorite controlled
 // @Title Get
 // @Description get controlled
-// @Param	id		int		false		models.Controlled			JSON
-// @Success 200 	[]ResponseControlled		JSON
-// @Failure 400 Can't strconv.Atoi param 'id'
+// @Param	id	path	int		true	"The controlled you want to receive"
+// @Success 200 {object} models.Сontrolled
+// @Failure 400 :object is empty
 // @Failure 500 database error
 // @router /:id [get]
-func (c *Controlled) GetOne() {
-	strID := c.Ctx.Input.Param(":id")
+func (o *Controlled) GetOne() {
+	strID := o.Ctx.Input.Param(":id")
 	if strID == "" {
-		c.CustomAbort(400, "No id")
+		o.CustomAbort(400, "Wrong controlled id")
 	}
 
 	controlledID, err := strconv.Atoi(strID)
 	if err != nil {
-		c.CustomAbort(400, "Can't strconv.Atoi param 'id'")
+		o.CustomAbort(400, "Wrong controlled id")
 	}
 
 	controlled := controlled.GetControlled(controlledID)
 
-	c.Data["json"] = controlled
-	c.ServeJSON()
+	o.Data["json"] = controlled
+	o.ServeJSON()
 	return
 }
 
-// Get - return favorite controlled or controlleds
+// Get - return favorite controlleds
 // @Title Get
-// @Description get controlled or controlleds
-// @Param	id		int		false		return		models.Controlled			JSON
-// @Success 200 	if no ID 			return		[]ResponseControlled		JSON
-// @Failure 400 Can't strconv.Atoi param 'id'
+// @Description get controlleds
+// @Success 200 	{object}	[]controlled.ResponseControlled
 // @Failure 500 database error
 // @router / [get]
-func (c *Controlled) Get() {
+func (o *Controlled) Get() {
 	mapControlleds := controlled.GetControlleds()
 	var controlleds []*ResponseControlled
 	for key, val := range mapControlleds {
@@ -139,31 +150,31 @@ func (c *Controlled) Get() {
 		})
 	}
 
-	c.Data["json"] = controlleds
-	c.ServeJSON()
+	o.Data["json"] = controlleds
+	o.ServeJSON()
 }
 
 // Delete - delete a favorite controlled
 // @Title Delete
 // @Description delete controlled
-// @Param	id		int		true	"The id you want to delete"
+// @Param	id	path	int		true	"The id you want to delete"
 // @Success 200
 // @Failure 400 id is empty
 // @Failure 500 database error
 // @router /:id [delete]
-func (c *Controlled) Delete() {
-	controlledID, _ := strconv.Atoi(c.Ctx.Input.Param(":id"))
+func (o *Controlled) Delete() {
+	controlledID, _ := strconv.Atoi(o.Ctx.Input.Param(":id"))
 	if controlledID < 1 {
-		c.CustomAbort(400, "Wrong id")
+		o.CustomAbort(400, "Wrong id")
 	}
 
 	err := controlled.DeleteControlled(controlledID)
 	if err != nil {
-		c.CustomAbort(500, err.Error())
+		o.CustomAbort(500, err.Error())
 	}
 
-	c.Data["json"] = "Ok"
-	c.ServeJSON()
+	o.Data["json"] = "Ok"
+	o.ServeJSON()
 }
 
 type InfoControlled struct {
@@ -173,15 +184,49 @@ type InfoControlled struct {
 // Get - return: information on all controlled
 // @Title Get
 // @Description get information on all controlled
-// @Success 200	string
+// @Success 200	string	"Info a controlleds"
 // @Failure 500 database error
 // @router / [get]
-func (c *InfoControlled) Get() {
+func (o *InfoControlled) Get() {
 	info, err := controlled.GetInfoControlledsString()
 	if err != nil {
-		c.CustomAbort(500, err.Error())
+		o.CustomAbort(500, err.Error())
 	}
 
-	c.Ctx.Output.SetStatus(200)
-	c.Ctx.Output.Body([]byte(info))
+	o.Ctx.Output.SetStatus(200)
+	o.Ctx.Output.Body([]byte(info))
+}
+
+type ControlledMessage struct {
+	beego.Controller
+}
+
+// Post - message to server
+// @Title Post
+// @Description message to server
+// @Param	body			body	string	true	"The object message"
+// @Param	controlledid	path	int		true	"The your id"
+// @Success 200 string	"out server msg"
+// @Failure 400 wrong body data
+// @Failure 500 database error
+// @router /:controlledid [post]
+func (o *ControlledMessage) Post() {
+	msg := string(o.Ctx.Input.RequestBody)
+	fmt.Println(msg)
+	if msg == "" {
+		o.CustomAbort(400, "body empty")
+	}
+
+	controlledID, _ := strconv.Atoi(o.Ctx.Input.Param(":controlledid"))
+	if controlledID < 1 {
+		o.CustomAbort(400, "Wrong id")
+	}
+
+	outMsg, err := controlled.InMessage(controlledID, msg)
+	if err != nil {
+		o.CustomAbort(500, err.Error())
+	}
+
+	o.Ctx.Output.SetStatus(200)
+	o.Ctx.Output.Body([]byte(outMsg))
 }
